Money Manager 20.4.0
* Source code reorganization
* Usability improvements
* Performance improvements
* Binary support for Windows restored
* Separate window for account transactions