@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  Copyright (c) Petr Panteleyev. All rights reserved.
-  Licensed under the BSD license. See LICENSE file in the project root for full license information.
+  ~ Copyright (c) Petr Panteleyev. All rights reserved.
+  ~ Licensed under the BSD license. See LICENSE file in the project root for full license information.
   -->
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.panteleyev.money</groupId>
-    <artifactId>money-parent</artifactId>
-    <version>20.3.1</version>
-    <packaging>pom</packaging>
-    <name>Money Manager Parent</name>
+    <artifactId>money-manager</artifactId>
+    <version>20.4.0</version>
+    <packaging>jar</packaging>
+    <name>Money Manager</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -22,15 +22,17 @@
         <timestamp>${maven.build.timestamp}</timestamp>
         <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
         <!-- dependencies -->
-        <javaApiForMySqlVersion>1.2.0</javaApiForMySqlVersion>
+        <javaApiForMySqlVersion>1.3.0</javaApiForMySqlVersion>
         <javaFxVersion>14.0.1</javaFxVersion>
-        <javaFxHelpersVersion>1.2.0</javaFxHelpersVersion>
+        <javaFxHelpersVersion>1.2.1</javaFxHelpersVersion>
+        <ofxParserVersion>0.1.0</ofxParserVersion>
         <controlsFxVersion>11.0.1</controlsFxVersion>
         <mysqlConnectorVersion>8.0.15</mysqlConnectorVersion>
         <jsoupVersion>1.12.1</jsoupVersion>
         <gsonVersion>2.8.6</gsonVersion>
         <testngVersion>6.14.3</testngVersion>
         <freemarkerVersion>2.3.29</freemarkerVersion>
+        <commonsCsvVersion>1.8</commonsCsvVersion>
         <!-- plugins -->
         <mavenToolchainPluginVersion>3.0.0</mavenToolchainPluginVersion>
         <mavenCompilerPluginVersion>3.8.1</mavenCompilerPluginVersion>
@@ -47,91 +49,82 @@
         <money.test.mysql.password>__define_mysql_password__</money.test.mysql.password>
     </properties>
 
-    <modules>
-        <module>model</module>
-        <module>persistence</module>
-        <module>ofx</module>
-        <module>statements</module>
-        <module>ymoney</module>
-        <module>application</module>
-    </modules>
-
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.panteleyev</groupId>
-                <artifactId>java-api-for-mysql</artifactId>
-                <version>${javaApiForMySqlVersion}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.panteleyev</groupId>
-                <artifactId>java-fx-helpers</artifactId>
-                <version>${javaFxHelpersVersion}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.controlsfx</groupId>
-                <artifactId>controlsfx</artifactId>
-                <version>${controlsFxVersion}</version>
-            </dependency>
-            <dependency>
-                <groupId>mysql</groupId>
-                <artifactId>mysql-connector-java</artifactId>
-                <version>${mysqlConnectorVersion}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.jsoup</groupId>
-                <artifactId>jsoup</artifactId>
-                <version>${jsoupVersion}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.google.code.gson</groupId>
-                <artifactId>gson</artifactId>
-                <version>${gsonVersion}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-base</artifactId>
-                <version>${javaFxVersion}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-controls</artifactId>
-                <version>${javaFxVersion}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-web</artifactId>
-                <version>${javaFxVersion}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-swing</artifactId>
-                <version>${javaFxVersion}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-media</artifactId>
-                <version>${javaFxVersion}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-graphics</artifactId>
-                <version>${javaFxVersion}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.commons</groupId>
-                <artifactId>commons-csv</artifactId>
-                <version>1.7</version>
-            </dependency>
-            <dependency>
-                <groupId>org.freemarker</groupId>
-                <artifactId>freemarker</artifactId>
-                <version>${freemarkerVersion}</version>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
-
     <dependencies>
+        <dependency>
+            <groupId>org.panteleyev</groupId>
+            <artifactId>java-api-for-mysql</artifactId>
+            <version>${javaApiForMySqlVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.panteleyev</groupId>
+            <artifactId>java-fx-helpers</artifactId>
+            <version>${javaFxHelpersVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.panteleyev</groupId>
+            <artifactId>ofx-parser</artifactId>
+            <version>${ofxParserVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.controlsfx</groupId>
+            <artifactId>controlsfx</artifactId>
+            <version>${controlsFxVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${mysqlConnectorVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>${jsoupVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${gsonVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-base</artifactId>
+            <version>${javaFxVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>${javaFxVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-web</artifactId>
+            <version>${javaFxVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-swing</artifactId>
+            <version>${javaFxVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-media</artifactId>
+            <version>${javaFxVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-graphics</artifactId>
+            <version>${javaFxVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>${commonsCsvVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>${freemarkerVersion}</version>
+        </dependency>
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
@@ -168,7 +161,7 @@
                 <configuration>
                     <toolchains>
                         <jdk>
-                            <version>14</version>
+                            <version>${maven.compiler.target}</version>
                         </jdk>
                     </toolchains>
                 </configuration>
@@ -187,16 +180,53 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>${mavenJarPluginVersion}</version>
+                <configuration>
+                    <outputDirectory>target/jmods</outputDirectory>
+                    <archive>
+                        <manifestEntries>
+                            <Main-Class>${appMainClass}</Main-Class>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>${mavenDependencyPluginVersion}</version>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <includeScope>runtime</includeScope>
+                            <outputDirectory>target/jmods</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${mavenSurefirePluginVersion}</version>
                 <configuration>
-                    <argLine>--enable-preview</argLine>
                     <suiteXmlFiles>
                         <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
                     </suiteXmlFiles>
+                    <argLine>
+                        --enable-preview
+                        --add-exports javafx.base/com.sun.javafx.event=org.controlsfx.controls
+                        --add-opens javafx.graphics/javafx.scene=org.controlsfx.controls
+                        --add-reads org.panteleyev.mysqlapi=org.panteleyev.money
+                    </argLine>
+                    <systemPropertyVariables>
+                        <mysql.host>${money.test.mysql.host}</mysql.host>
+                        <mysql.user>${money.test.mysql.user}</mysql.user>
+                        <mysql.password>${money.test.mysql.password}</mysql.password>
+                        <mysql.database>${money.test.mysql.database}</mysql.database>
+                    </systemPropertyVariables>
                 </configuration>
             </plugin>
             <plugin>
@@ -207,6 +237,48 @@
                     <longModulepath>false</longModulepath>
                 </configuration>
                 <executions>
+                    <execution>
+                        <id>dist-win</id>
+                        <phase>none</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <executable>
+                                ${java.home}/bin/jpackage
+                            </executable>
+                            <arguments>
+                                <argument>--module</argument>
+                                <argument>${appModule}/${appMainClass}</argument>
+                                <argument>--runtime-image</argument>
+                                <argument>${java.home}</argument>
+                                <argument>--dest</argument>
+                                <argument>target/dist</argument>
+                                <argument>-p</argument>
+                                <argument>target/jmods</argument>
+                                <argument>--java-options</argument>
+                                <argument>
+                                    --add-exports javafx.base/com.sun.javafx.event=org.controlsfx.controls
+                                    -Dfile.encoding=UTF-8
+                                    --enable-preview
+                                </argument>
+                                <argument>--icon</argument>
+                                <argument>icons/icons.ico</argument>
+                                <argument>--name</argument>
+                                <argument>Money Manager</argument>
+                                <argument>--app-version</argument>
+                                <argument>${project.version}</argument>
+                                <argument>--vendor</argument>
+                                <argument>panteleyev.org</argument>
+                                <argument>--win-menu</argument>
+                                <argument>--win-dir-chooser</argument>
+                                <argument>--win-upgrade-uuid</argument>
+                                <argument>38dac4b6-91d2-4ca8-aacb-2e0cfd54127a</argument>
+                                <argument>--win-menu-group</argument>
+                                <argument>panteleyev.org</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
                     <execution>
                         <id>dist-mac</id>
                         <phase>none</phase>
@@ -245,16 +317,20 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>${javaFxPluginVersion}</version>
+                <configuration>
+                    <mainClass>${appModule}/${appMainClass}</mainClass>
+                    <options>
+                        <option>--enable-preview</option>
+                        <option>-Dfile.encoding=UTF-8</option>
+                        <option>--add-exports</option>
+                        <option>javafx.base/com.sun.javafx.event=org.controlsfx.controls</option>
+                    </options>
+                </configuration>
+            </plugin>
         </plugins>
-
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.openjfx</groupId>
-                    <artifactId>javafx-maven-plugin</artifactId>
-                    <version>${javaFxPluginVersion}</version>
-                </plugin>
-            </plugins>
-        </pluginManagement>
     </build>
 </project>
